--- a/letslunch_iPhone2/CreateActivityViewController.xib
+++ b/letslunch_iPhone2/CreateActivityViewController.xib
@@ -12,9 +12,9 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
-			<string>IBUIButton</string>
 			<string>IBUILabel</string>
 			<string>IBUISegmentedControl</string>
+			<string>IBUITableView</string>
 			<string>IBUITextField</string>
 			<string>IBUIView</string>
 		</array>
@@ -45,10 +45,9 @@
 							<object class="IBUILabel" id="1054206049">
 								<reference key="NSNextResponder" ref="1036791308"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 95}, {280, 21}}</string>
+								<string key="NSFrame">{{20, 105}, {280, 21}}</string>
 								<reference key="NSSuperview" ref="1036791308"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -72,47 +71,10 @@
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIButton" id="411014632">
-								<reference key="NSNextResponder" ref="1036791308"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 0}, {280, 44}}</string>
-								<reference key="NSSuperview" ref="1036791308"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="205241133"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUIButtonType">1</int>
-								<string key="IBUINormalTitle">Place</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">2</int>
-									<double key="pointSize">15</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
 							<object class="IBUISegmentedControl" id="205241133">
 								<reference key="NSNextResponder" ref="1036791308"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 50}, {280, 41}}</string>
+								<string key="NSFrame">{{20, 65}, {280, 41}}</string>
 								<reference key="NSSuperview" ref="1036791308"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1054206049"/>
@@ -148,16 +110,39 @@
 									<bytes key="NSRGB">MSAwLjUgMAA</bytes>
 								</object>
 							</object>
+							<object class="IBUITableView" id="82993514">
+								<reference key="NSNextResponder" ref="1036791308"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{320, 60}</string>
+								<reference key="NSSuperview" ref="1036791308"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="205241133"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor" id="305481569">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
+								</object>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<bool key="IBUIAlwaysBounceVertical">YES</bool>
+								<bool key="IBUIScrollEnabled">NO</bool>
+								<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+								<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
+								<int key="IBUIIndicatorStyle">1</int>
+								<int key="IBUIStyle">1</int>
+								<int key="IBUISeparatorStyle">2</int>
+								<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+								<float key="IBUIRowHeight">44</float>
+								<float key="IBUISectionHeaderHeight">10</float>
+								<float key="IBUISectionFooterHeight">10</float>
+							</object>
 						</array>
 						<string key="NSFrame">{{0, 130}, {320, 438}}</string>
 						<reference key="NSSuperview" ref="885162766"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="411014632"/>
+						<reference key="NSNextKeyView" ref="82993514"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="305481569">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwAA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="305481569"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -250,14 +235,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">buttonPushPlace</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="411014632"/>
-					</object>
-					<int key="connectionID">31</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">labelBroadcast</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="1054206049"/>
@@ -271,6 +248,14 @@
 						<reference key="destination" ref="1036791308"/>
 					</object>
 					<int key="connectionID">91</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">tableView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="82993514"/>
+					</object>
+					<int key="connectionID">117</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -299,13 +284,20 @@
 					<int key="connectionID">45</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">pushSelectPlace:</string>
-						<reference key="source" ref="411014632"/>
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dataSource</string>
+						<reference key="source" ref="82993514"/>
 						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">1</int>
 					</object>
-					<int key="connectionID">51</int>
+					<int key="connectionID">118</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="82993514"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">119</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -347,8 +339,8 @@
 						<reference key="object" ref="1036791308"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="205241133"/>
-							<reference ref="411014632"/>
 							<reference ref="1054206049"/>
+							<reference ref="82993514"/>
 						</array>
 						<reference key="parent" ref="885162766"/>
 						<string key="objectName">View - viewContent</string>
@@ -360,15 +352,14 @@
 						<reference key="parent" ref="1036791308"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">27</int>
-						<reference key="object" ref="411014632"/>
+						<int key="objectID">39</int>
+						<reference key="object" ref="1054206049"/>
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="1036791308"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">39</int>
-						<reference key="object" ref="1054206049"/>
-						<array class="NSMutableArray" key="children"/>
+						<int key="objectID">116</int>
+						<reference key="object" ref="82993514"/>
 						<reference key="parent" ref="1036791308"/>
 					</object>
 				</array>
@@ -380,9 +371,9 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.CustomClassName">MYTextField</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="116.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<integer value="1" key="19.IUISegmentedControlInspectorSelectedSegmentMetadataKey"/>
-				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -391,7 +382,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">115</int>
+			<int key="maxID">119</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -399,15 +390,10 @@
 					<string key="className">CreateActivityViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="pushSelectPlace:">id</string>
 						<string key="segmentValueChanged:">id</string>
 						<string key="textFieldReturn:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="pushSelectPlace:">
-							<string key="name">pushSelectPlace:</string>
-							<string key="candidateClassName">id</string>
-						</object>
 						<object class="IBActionInfo" key="segmentValueChanged:">
 							<string key="name">segmentValueChanged:</string>
 							<string key="candidateClassName">id</string>
@@ -418,17 +404,13 @@
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="buttonPushPlace">UIButton</string>
 						<string key="labelBroadcast">UILabel</string>
 						<string key="segment">UISegmentedControl</string>
+						<string key="tableView">UITableView</string>
 						<string key="textFieldDescription">UITextField</string>
 						<string key="viewContent">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="buttonPushPlace">
-							<string key="name">buttonPushPlace</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="labelBroadcast">
 							<string key="name">labelBroadcast</string>
 							<string key="candidateClassName">UILabel</string>
@@ -436,6 +418,10 @@
 						<object class="IBToOneOutletInfo" key="segment">
 							<string key="name">segment</string>
 							<string key="candidateClassName">UISegmentedControl</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tableView">
+							<string key="name">tableView</string>
+							<string key="candidateClassName">UITableView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="textFieldDescription">
 							<string key="name">textFieldDescription</string>
