TextField for message
Moving textField when responder and resigner. Getting content of
textField (NSLog). Clearing content of textField.

--- a/letslunch_iPhone2/MessageViewController.xib
+++ b/letslunch_iPhone2/MessageViewController.xib
@@ -47,8 +47,8 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
+						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics" id="715868292"/>
 						<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
 							<bool key="IBUIPrompted">NO</bool>
@@ -87,10 +87,8 @@
 						<string key="NSFrame">{{0, 474}, {320, 30}}</string>
 						<reference key="NSSuperview" ref="213365220"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="1002838885"/>
-						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -127,7 +125,6 @@
 				<reference key="NSNextKeyView" ref="873029372"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="1002838885"/>
-				<bool key="IBUIUserInteractionEnabled">NO</bool>
 				<reference key="IBUISimulatedStatusBarMetrics" ref="715868292"/>
 				<reference key="IBUISimulatedDestinationMetrics" ref="1032728237"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -181,7 +178,25 @@
 						<reference key="source" ref="307861855"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
-					<int key="connectionID">28</int>
+					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">textFieldShouldReturn:</string>
+						<reference key="source" ref="307861855"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">20</int>
+					</object>
+					<int key="connectionID">53</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">textFieldShouldBeginEditing:</string>
+						<reference key="source" ref="307861855"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">17</int>
+					</object>
+					<int key="connectionID">54</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -239,13 +254,37 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">54</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">MessageViewController</string>
 					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="textFieldBeginEdit:">id</string>
+						<string key="textFieldReturn:">id</string>
+						<string key="textFieldShouldBeginEditing:">UITextField</string>
+						<string key="textFieldShouldReturn:">UITextField</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="textFieldBeginEdit:">
+							<string key="name">textFieldBeginEdit:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="textFieldReturn:">
+							<string key="name">textFieldReturn:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="textFieldShouldBeginEditing:">
+							<string key="name">textFieldShouldBeginEditing:</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBActionInfo" key="textFieldShouldReturn:">
+							<string key="name">textFieldShouldReturn:</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="tableView">UITableView</string>
 						<string key="textFieldMessage">UITextField</string>
