--- a/letslunch_iPhone2/ShareViewController.xib
+++ b/letslunch_iPhone2/ShareViewController.xib
@@ -57,6 +57,7 @@
 						<string key="NSFrame">{{13, 85}, {30, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
